# PoseBust

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  install.sh
.github/workflows/: ci.yml
apps/: posebust_main.cpp
docs/: THERMODYNAMICS.md  THIRD_PARTY.md
docs/licensing/: APPLYING_THE_LICENSE.md  clean-room-policy.md
include/posebust/: BustCli.h  ChecksChemistry.h  ChecksGeometry.h  ChecksProtein.h  Engine.h  Loaders.h  Types.h  shell_exec.h
src/: BustCli.cpp  ChecksChemistry.cpp  ChecksGeometry.cpp  ChecksProtein.cpp  Engine.cpp  Loaders.cpp
tests/: test_posebust_core.cpp  test_posebust_loaders.cpp
